# linux_cuda_clion_template

./: CMakeLists.txt  main.cpp  vectorAdd.cu
